# gui-in-c

./: .bazelignore  .bazelrc  .bazelversion  .clang-tidy  .clang-uml  .envrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  devshell.nix  flake.nix  formatter.nix  nixpkgs.nix
bazel/: sdl3.BUILD.bazel  sdl3_image.BUILD.bazel
bazel/patches/: rules_qt6-llvm.patch  sdl3-module.patch
src/: hello-world.cc
src/gtk/: BUILD.bazel  gtkmain.c  hello-world-gtk.c
src/imgui/: BUILD.bazel  example_glfw_opengl3.cpp
src/qt/: BUILD.bazel  helloworld.cpp
src/sdl3/: BUILD.bazel  hello-world-sdl3.c
src/tutorials/c/: BUILD.bazel  getenv.c  main.c
src/tutorials/helloworld/: BUILD.bazel  casting_some_more.cpp  declaration_matching2.cpp  declaring_a_union.cpp  dynamic_cast_8.cpp  enum_explorer.cpp  expre_CastOperator.cpp  fancy_bitset.cpp  function_samples.cpp  helloworld.cc  if_constexpr.cpp  if_initializer.cpp  null_statement.cpp  range_based_for.cpp  weather_unions.cpp  while_statement.cpp
src/tutorials/langstandards/: BUILD.bazel  main.cpp
tools/: BUILD.bazel
tools/patches/: rules_cc-windows_support.patch  toolchains_llvm-windows_support.patch
