module(name = "guis-in-c")

# https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# https://github.com/bazelbuild/rules_cc
bazel_dep(name = "rules_cc", version = "0.2.16")

# https://github.com/bazelbuild/platforms
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "glib", version = "2.82.2.bcr.8")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
# bazel run @hedron_compile_commands//:refresh_all

# Look at this: https://github.com/tweag/rules_nixpkgs/blob/a425ed7865b769c5508507ac8b3817feebe3eed7/testing/core/MODULE.bazel#L50
# https://github.com/egen/disruptor/blob/aec36d22cf53bf8f941d84b82cf5e0f43b01c02b/projects/bzl7/MODULE.bazel#L5

# https://github.com/Vertexwahn/rules_qt6
bazel_dep(name = "rules_qt")
git_override(
    module_name = "rules_qt",
    commit = "859cf10e7fbc5be55f6ac25b08c2d6a6dbf1d899",
    remote = "https://github.com/Vertexwahn/rules_qt6.git",
)

qt = use_extension("@rules_qt//extension:qt.bzl", "fetch")
qt.install(
    name = "qt_linux_x86_64",
    build_file = "@rules_qt//extension:qt/6.8.3/linux_x86_64.BUILD",
    os = "linux",
    version = "6.8.3",
)
qt.install(
    name = "qt_windows_x86_64",
    build_file = "@rules_qt//extension:qt/6.8.3/windows_x86_64.BUILD",
    os = "windows",
    version = "6.8.3",
    windows_architecture = "win64_msvc2022",
)
use_repo(
    qt,
    "qt_linux_x86_64",
    "qt_windows_x86_64",
)

register_toolchains(
    "@rules_qt//tools:all",
    dev_dependency = True,
)

# TODO(@waflores) 2025-06-03: Figure out how to register clang/gcc properly in the repo

# https://github.com/bazel-contrib/bazelrc-preset.bzl
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
