# buildifier: disable=module-docstring
module(name = "guis-in-c")

# https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# https://github.com/bazelbuild/rules_cc
bazel_dep(name = "rules_cc", version = "0.2.17")

# https://github.com/bazelbuild/platforms
bazel_dep(name = "platforms", version = "1.0.0")

# https://github.com/keith/buildifier-prebuilt
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
bazel_dep(name = "glib", version = "2.82.2.bcr.8")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
# bazel run @hedron_compile_commands//:refresh_all

# Look at this: https://github.com/tweag/rules_nixpkgs/blob/a425ed7865b769c5508507ac8b3817feebe3eed7/testing/core/MODULE.bazel#L50
# https://github.com/egen/disruptor/blob/aec36d22cf53bf8f941d84b82cf5e0f43b01c02b/projects/bzl7/MODULE.bazel#L5

# https://github.com/Vertexwahn/rules_qt6
bazel_dep(name = "rules_qt")
git_override(
    module_name = "rules_qt",
    commit = "a986944a1f0eb0aa5e5fedafdf3ac72577f5c628",
    remote = "https://github.com/Vertexwahn/rules_qt6.git",
)

qt = use_extension("@rules_qt//extension:qt.bzl", "fetch")
qt.install(
    name = "qt_linux_x86_64",
    build_file = "@rules_qt//extension:qt/6.8.3/linux_x86_64.BUILD",
    os = "linux",
    version = "6.8.3",
)
qt.install(
    name = "qt_windows_x86_64",
    build_file = "@rules_qt//extension:qt/6.8.3/windows_x86_64.BUILD",
    os = "windows",
    version = "6.8.3",
    windows_architecture = "win64_msvc2022",
)
use_repo(
    qt,
    "qt_linux_x86_64",
    "qt_windows_x86_64",
)

register_toolchains(
    "@rules_qt//tools:all",
    dev_dependency = True,
)

# TODO(@waflores) 2025-06-03: Figure out how to register clang/gcc properly in the repo

# https://github.com/bazel-contrib/bazelrc-preset.bzl
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "rules_foreign_cc")
git_override(
    module_name = "rules_foreign_cc",
    commit = "16566f37f1220b996efc265ab848a2d3f52a488c",
    remote = "https://github.com/bazel-contrib/rules_foreign_cc.git",
)

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")

_ALL_CONTENT = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# pcre source code repository
http_archive(
    name = "pcre",
    build_file_content = _ALL_CONTENT,
    sha256 = "0b8e7465dc5e98c757cc3650a20a7843ee4c3edf50aaf60bb33fd879690d2c73",
    strip_prefix = "pcre-8.43",
    urls = [
        "https://mirror.bazel.build/ftp.pcre.org/pub/pcre/pcre-8.43.tar.gz",
        "https://ftp.pcre.org/pub/pcre/pcre-8.43.tar.gz",
    ],
)

# https://github.com/libsdl-org/SDL
bazel_dep(name = "sdl3", version = "3.4.2")
archive_override(
    module_name = "sdl3",
    build_file = "@//bazel:sdl3.BUILD.bazel",
    integrity = "sha256-7zmi4/mop4KWxA2nAZZ90bDQ1uJn5IOGPOcPigO0BQw=",
    patches = ["bazel/patches/sdl3-module.patch"],
    strip_prefix = "SDL3-3.4.2",
    urls = ["https://github.com/libsdl-org/SDL/releases/download/release-3.4.2/SDL3-3.4.2.tar.gz"],
)

# TODO: we need to have a look at this stuff: https://bazel.build/external/migration
# https://bazel.build/external/faq
# https://github.com/bazelbuild/examples/tree/main/bzlmod
