# Have a look at this: https://github.com/tweag/rules_nixpkgs/blob/master/examples/toolchains/cc_with_deps/WORKSPACE

cc_binary(
    name = "hello-world-gtk",
    srcs = ["hello-world-gtk.c"],
    deps = [
        "@cairo",
        "@gdk-pixbuf",
        "@glib//gio",
        "@glib//glib",
        "@glib//gobject",
        "@graphene",
        "@gtk4",
        "@harfbuzz",
        "@pango",
    ],
)
