load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

# Have a look at this: https://github.com/tweag/rules_nixpkgs/blob/master/examples/toolchains/cc_with_deps/WORKSPACE

cc_binary(
    name = "hello-world-sdl3",
    srcs = ["hello-world-sdl3.c"],
    deps = [
        "@sdl3",
        "@sdl3//:main",
    ],
)
