load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "helloworld",
    srcs = ["helloworld.cc"],
)

cc_binary(
    name = "cast_operator",
    srcs = ["expre_CastOperator.cpp"],
)

cc_binary(
    name = "fancy_bitset",
    srcs = ["fancy_bitset.cpp"],
)

cc_binary(
    name = "casting_some_more",
    srcs = ["casting_some_more.cpp"],
)

cc_binary(
    name = "dynamic_cast_8",
    srcs = ["dynamic_cast_8.cpp"],
)

cc_binary(
    name = "null_statement",
    srcs = ["null_statement.cpp"],
)

cc_binary(
    name = "if_initializer",
    srcs = ["if_initializer.cpp"],
)

cc_binary(
    name = "if_constexpr",
    srcs = ["if_constexpr.cpp"],
)

cc_binary(
    name = "while_statement",
    srcs = ["while_statement.cpp"],
)

cc_binary(
    name = "range_based_for",
    srcs = ["range_based_for.cpp"],
)

cc_binary(
    name = "enum_explorer",
    srcs = ["enum_explorer.cpp"],
)

cc_binary(
    name = "declaring_a_union",
    srcs = ["declaring_a_union.cpp"],
)

cc_binary(
    name = "weather_unions",
    srcs = ["weather_unions.cpp"],
)
